Fix spacing issue

--- a/src/pages/project/animated-gradient-svg-button/index.module.css
+++ b/src/pages/project/animated-gradient-svg-button/index.module.css
@@ -1,6 +1,7 @@
 .page{
     height: 100%;
     width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
