--- a/src/pages/project/dialog-height-transition/index.module.css
+++ b/src/pages/project/dialog-height-transition/index.module.css
@@ -1,6 +1,7 @@
 .page{
     /* background-color:rgba(0,0,0,0.05); */
     height:100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
