--- a/src/pages/project/draggable-dialogue/index.module.css
+++ b/src/pages/project/draggable-dialogue/index.module.css
@@ -7,6 +7,7 @@
 .page{
     display: flex;
     height: 100%;
+    min-height: 100vh;
     width: 100%;
     justify-content: center;
     align-items: center;
